Created CSS and made buttons

--- a/c4.html
+++ b/c4.html
@@ -1,57 +1,67 @@
-<div class = "Grid map">
-  <!--First Row-->
-  <div class = "grid item" id = "11"></div>
-  <div class = "grid item" id = "12"></div>
-  <div class = "grid item" id = "13"></div>
-  <div class = "grid item" id = "14"></div>
-  <div class = "grid item" id = "15"></div>
-  <div class = "grid item" id = "16"></div>
-  <div class = "grid item" id = "17"></div>
 
+<head>
+  <link href = "styles.css" rel = "stylesheet" type = "text/css"/>
+</head>
+
+<div class = "Button Grid map">
+  <!--First Row-->
+  <button class = "grid item" id = "11"></button>
+  <button class = "grid item" id = "12"></button>
+  <button class = "grid item" id = "13"></button>
+  <button class = "grid item" id = "14"></button>
+  <button class = "grid item" id = "15"></button>
+  <button class = "grid item" id = "16"></button>
+  <button class = "grid item" id = "17"></button>
+  <br>
   <!--Second Row-->
-  <div class = "grid item" id = "21"></div>
-  <div class = "grid item" id = "22"></div>
-  <div class = "grid item" id = "23"></div>
-  <div class = "grid item" id = "24"></div>
-  <div class = "grid item" id = "25"></div>
-  <div class = "grid item" id = "26"></div>
-  <div class = "grid item" id = "27"></div>
+  <button class = "grid item" id = "21"></button>
+  <button class = "grid item" id = "22"></button>
+  <button class = "grid item" id = "23"></button>
+  <button class = "grid item" id = "24"></button>
+  <button class = "grid item" id = "25"></button>
+  <button class = "grid item" id = "26"></button>
+  <button class = "grid item" id = "27"></button>
+  <br>
 
     <!--Third Row-->
-  <div class = "grid item" id = "31"></div>
-  <div class = "grid item" id = "32"></div>
-  <div class = "grid item" id = "33"></div>
-  <div class = "grid item" id = "34"></div>
-  <div class = "grid item" id = "35"></div>
-  <div class = "grid item" id = "36"></div>
-  <div class = "grid item" id = "37"></div>
+  <button class = "grid item" id = "31"></button>
+  <button class = "grid item" id = "32"></button>
+  <button class = "grid item" id = "33"></button>
+  <button class = "grid item" id = "34"></button>
+  <button class = "grid item" id = "35"></button>
+  <button class = "grid item" id = "36"></button>
+  <button class = "grid item" id = "37"></button>
+  <br>
 
   <!--Fourth Row-->
-  <div class = "grid item" id = "41"></div>
-  <div class = "grid item" id = "42"></div>
-  <div class = "grid item" id = "43"></div>
-  <div class = "grid item" id = "44"></div>
-  <div class = "grid item" id = "45"></div>
-  <div class = "grid item" id = "46"></div>
-  <div class = "grid item" id = "47"></div>
+  <button class = "grid item" id = "41"></button>
+  <button class = "grid item" id = "42"></button>
+  <button class = "grid item" id = "43"></button>
+  <button class = "grid item" id = "44"></button>
+  <button class = "grid item" id = "45"></button>
+  <button class = "grid item" id = "46"></button>
+  <button class = "grid item" id = "47"></button>
+  <br>
 
   <!--Fifth Row-->
-  <div class = "grid item" id = "51"></div>
-  <div class = "grid item" id = "52"></div>
-  <div class = "grid item" id = "53"></div>
-  <div class = "grid item" id = "54"></div>
-  <div class = "grid item" id = "55"></div>
-  <div class = "grid item" id = "56"></div>
-  <div class = "grid item" id = "57"></div>
+  <button class = "grid item" id = "51"></button>
+  <button class = "grid item" id = "52"></button>
+  <button class = "grid item" id = "53"></button>
+  <button class = "grid item" id = "54"></button>
+  <button class = "grid item" id = "55"></button>
+  <button class = "grid item" id = "56"></button>
+  <button class = "grid item" id = "57"></button>
+  <br>
 
   <!--Sixth Row-->
-  <div class = "grid item" id = "61"></div>
-  <div class = "grid item" id = "62"></div>
-  <div class = "grid item" id = "63"></div>
-  <div class = "grid item" id = "64"></div>
-  <div class = "grid item" id = "65"></div>
-  <div class = "grid item" id = "66"></div>
-  <div class = "grid item" id = "67"></div>
+  <button class = "grid item" id = "61"></button>
+  <button class = "grid item" id = "62"></button>
+  <button class = "grid item" id = "63"></button>
+  <button class = "grid item" id = "64"></button>
+  <button class = "grid item" id = "65"></button>
+  <button class = "grid item" id = "66"></button>
+  <button class = "grid item" id = "67"></button>
+  <br>
 
 
 
