--- a/c4.html
+++ b/c4.html
@@ -1,68 +1,79 @@
 
+
 <head>
   <link href = "styles.css" rel = "stylesheet" type = "text/css"/>
 </head>
-
-<div class = "Button Grid map">
-  <!--First Row-->
-  <button class = "grid item" id = "11"></button>
-  <button class = "grid item" id = "12"></button>
-  <button class = "grid item" id = "13"></button>
-  <button class = "grid item" id = "14"></button>
-  <button class = "grid item" id = "15"></button>
-  <button class = "grid item" id = "16"></button>
-  <button class = "grid item" id = "17"></button>
-  <br>
-  <!--Second Row-->
-  <button class = "grid item" id = "21"></button>
-  <button class = "grid item" id = "22"></button>
-  <button class = "grid item" id = "23"></button>
-  <button class = "grid item" id = "24"></button>
-  <button class = "grid item" id = "25"></button>
-  <button class = "grid item" id = "26"></button>
-  <button class = "grid item" id = "27"></button>
-  <br>
-
-    <!--Third Row-->
-  <button class = "grid item" id = "31"></button>
-  <button class = "grid item" id = "32"></button>
-  <button class = "grid item" id = "33"></button>
-  <button class = "grid item" id = "34"></button>
-  <button class = "grid item" id = "35"></button>
-  <button class = "grid item" id = "36"></button>
-  <button class = "grid item" id = "37"></button>
-  <br>
-
-  <!--Fourth Row-->
-  <button class = "grid item" id = "41"></button>
-  <button class = "grid item" id = "42"></button>
-  <button class = "grid item" id = "43"></button>
-  <button class = "grid item" id = "44"></button>
-  <button class = "grid item" id = "45"></button>
-  <button class = "grid item" id = "46"></button>
-  <button class = "grid item" id = "47"></button>
-  <br>
-
-  <!--Fifth Row-->
-  <button class = "grid item" id = "51"></button>
-  <button class = "grid item" id = "52"></button>
-  <button class = "grid item" id = "53"></button>
-  <button class = "grid item" id = "54"></button>
-  <button class = "grid item" id = "55"></button>
-  <button class = "grid item" id = "56"></button>
-  <button class = "grid item" id = "57"></button>
-  <br>
-
-  <!--Sixth Row-->
-  <button class = "grid item" id = "61"></button>
-  <button class = "grid item" id = "62"></button>
-  <button class = "grid item" id = "63"></button>
-  <button class = "grid item" id = "64"></button>
-  <button class = "grid item" id = "65"></button>
-  <button class = "grid item" id = "66"></button>
-  <button class = "grid item" id = "67"></button>
-  <br>
-
-
-
+<!--This will handle the inputs on where the user want to place the circle-->
+<!--The buttons will also change color depending on whose turn it is-->
+<div class = "row" >
+  <button class = "button" onclick = "addPiece(0,0)" id = "b1"></button><br>
+  <button class = "button" onclick = "addPiece(0,1)" id = "b2"></button><br>
+  <button class = "button" onclick = "addPiece(0,2)" id = "b3"></button><br>
+  <button class = "button" onclick = "addPiece(0,3)" id = "b4"></button><br>
+  <button class = "button" onclick = "addPiece(0,4)" id = "b5"></button><br>
+  <button class = "button" onclick = "addPiece(0,5)" id = "b6"></button><br>
+  <button class = "button" onclick = "addPiece(0,6)" id = "b7"></button><br>
 </div>
+<br>
+<br>
+
+<div class = "row">
+  <p class = tile id = "50"></p><br>
+  <p class = tile id = "51"></p><br>
+  <p class = tile id = "52"></p><br>
+  <p class = tile id = "53"></p><br>
+  <p class = tile id = "54"></p><br>
+  <p class = tile id = "55"></p><br>
+  <p class = tile id = "56"></p><br>
+</div>
+
+<div class = "row">
+  <p class = tile id = "40"></p><br>
+  <p class = tile id = "41"></p><br>
+  <p class = tile id = "42"></p><br>
+  <p class = tile id = "43"></p><br>
+  <p class = tile id = "44"></p><br>
+  <p class = tile id = "45"></p><br>
+  <p class = tile id = "46"></p><br>
+</div>
+
+<div class = "row">
+  <p class = tile id = "30"></p><br>
+  <p class = tile id = "31"></p><br>
+  <p class = tile id = "32"></p><br>
+  <p class = tile id = "33"></p><br>
+  <p class = tile id = "34"></p><br>
+  <p class = tile id = "35"></p><br>
+  <p class = tile id = "36"></p><br>
+</div>
+
+<div class = "row">
+  <p class = tile id = "20"></p><br>
+  <p class = tile id = "21"></p><br>
+  <p class = tile id = "22"></p><br>
+  <p class = tile id = "23"></p><br>
+  <p class = tile id = "24"></p><br>
+  <p class = tile id = "25"></p><br>
+  <p class = tile id = "26"></p><br>
+</div>
+
+<div class = "row">
+  <p class = tile id = "10"></p><br>
+  <p class = tile id = "11"></p><br>
+  <p class = tile id = "12"></p><br>
+  <p class = tile id = "13"></p><br>
+  <p class = tile id = "14"></p><br>
+  <p class = tile id = "15"></p><br>
+  <p class = tile id = "16"></p><br>
+</div>
+
+<div class = "row">
+  <p class = tile id = "0"></p><br>
+  <p class = tile id = "1"></p><br>
+  <p class = tile id = "2"></p><br>
+  <p class = tile id = "3"></p><br>
+  <p class = tile id = "4"></p><br>
+  <p class = tile id = "5"></p><br>
+  <p class = tile id = "6"></p><br>
+</div>
+<script type = "text/javascript" src = "c4.js"></script>
